<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>syt_hmi</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="xxx@xxx.com">syt</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <build_depend>rviz_common</build_depend>
    <build_depend>rviz_default_plugins</build_depend>
    <build_depend>rviz_ogre_vendor</build_depend>
    <build_depend>rviz_rendering</build_depend>
    <depend>std_msgs</depend>
    <depend>syt_msgs</depend>
    <depend>syt_common</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>



